fixing hero button on mobile view
was having issues with the hero button on mobile where the text wrapped around itself

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -116,7 +116,7 @@ $hero-color: #138ee0;
     vertical-align: middle;
     font-size: 2.2rem;
     line-height: 0;
-    width: 20rem;
+    width: 22rem;
     height: 4.8rem;
     background-color: transparent;
     color: $hero-color;
@@ -131,7 +131,7 @@ $hero-color: #138ee0;
         position: absolute;
         top: -5px;
         left: -5px;
-        width: 20rem;
+        width: 22rem;
         height: 4.8rem;
         border-radius: 3px;
         border: 5px solid $hero-color;
